# GlobalGameJamVancouver2026

./: .gitignore  .gitmodules  CMakeLists.txt  CREDITS.txt  README.md
src/: Character.cpp  Character.hpp  CharacterFixedMovement.cpp  CharacterFixedMovement.hpp  DancePatterns.cpp  DancePatterns.hpp  Dancer.cpp  Dancer.hpp  Fade.cpp  Fade.hpp  GameState.cpp  GameState.hpp  Level.cpp  Level.hpp  Levels.cpp  Levels.hpp  SceneLevel.cpp  SceneLevel.hpp  SceneMainMenu.cpp  SceneMainMenu.hpp  SceneTest.cpp  SceneTest.hpp  SceneTesting.cpp  SceneTesting.hpp  main.cpp
src/game/: GameState.hpp  Level.cpp  Level.hpp
